--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 [dependencies]
 anyhow = "1"
 clap = { version = "3", features = ["derive"] }
+itertools = "0.10"
 newick = "0.5"
 rusqlite = "0.26"
 
