chore: add missing fields to Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "chainsaw"
 version = "1.8.1"
 edition = "2018"
+license = "LGPL-3.0-or-later"
+description = "A tool to manipulate newick trees"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
