--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ anyhow = "1"
 clap = { version = "3", features = ["derive"] }
 itertools = "0.10"
 newick = "0.11"
-rusqlite = "0.26.1" # Don't update (Guix)
-syntesuite = "0.4"
+rusqlite = "~0.29" # Don't update (Guix)
+syntesuite = "~0.5"
 
 [lib]
 name = "chainsaw"
